# Impasse

./: .gitignore  Board.cpp  Board.h  BoardState.cpp  BoardState.h  CMakeLists.txt  Features.txt  Game.cpp  Game.h  Move.cpp  Move.h  README.md  TT.h  ZobristHash.cpp  ZobristHash.h  evalTest.cpp  gameValidator.cpp  main.cpp  misc.cpp  misc.h
Agents/: AlphaBeta.cpp  AlphaBeta.h  BaseAgent.h  Human.cpp  Human.h  RandomAgent.cpp  RandomAgent.h  TT.cpp  TT.h  ZobristHash.h  evaluate.cpp  evaluate.h
